--- a/prismaclient/pubspec.yaml
+++ b/prismaclient/pubspec.yaml
@@ -34,7 +34,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  image_picker: ^0.8.7+1
   http: ^1.2.1
+  intl: ^0.20.2
+  web_socket_channel: ^3.0.3
 
 dev_dependencies:
   flutter_test:
