--- a/prismaclient/pubspec.yaml
+++ b/prismaclient/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   http: ^1.2.1
   intl: ^0.20.2
   web_socket_channel: ^3.0.3
+  url_launcher: ^6.3.2
+  webview_flutter: ^4.13.0
 
 dev_dependencies:
   flutter_test:
