--- a/prismaclient/pubspec.yaml
+++ b/prismaclient/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   web_socket_channel: ^3.0.3
   url_launcher: ^6.3.2
   webview_flutter: ^4.13.0
+  file_picker: ^10.2.1
 
 dev_dependencies:
   flutter_test:
